<resources>
    <string name="app_name">SDCardUpdate</string>
    <string name="preference_file_name">com.foxconn.zzdc.sdcardupdate.ota</string>
    <string name="old_version">old_version</string>
    <string name="check_update">Check Update</string>
    <string name="download">Download</string>
    <string name="update_log">Release Note</string>
    <string name="pause">Pause</string>
    <string name="notify_title_start_download">Start Download</string>
    <string name="notify_title_downloading">Downloading</string>
    <string name="notify_title_pause">Pause</string>
    <string name="notify_title_success">Download Finished</string>
    <string name="notify_title_failed">Download Failed</string>
    <string name="notify_channel_name">OTA Download Service</string>
    <string name="notify_channel_des">OTA Download Service</string>
    <string name="install">Install</string>
    <string name="no_permission_toast">You must grant the requested permission to continux</string>
    <string name="current_version">Current</string>
    <string name="new_version">New</string>
    <string name="no_new_version">The current is newest</string>
    <string name="auto_download">Auto download</string>
    <string name="auto_install">Night update</string>
    <string name="auto_download_case">connect wi-fi battery > 30%</string>
    <string name="auto_install_case">battery > 50%</string>
    <string name="settings">Settings</string>
    <string name="network_unavaliable">Network unavaliable, Please try again later</string>
</resources>
