<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/auto_download"
            android:paddingLeft="20dp"
            android:textSize="20sp"
            android:textColor="@color/gray"/>

        <Switch
            android:id="@+id/sw_autoDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/auto_download_case"
        android:textColor="@color/gainsboro"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/auto_install"
            android:textSize="20sp"
            android:textColor="@color/gray"/>

        <Switch
            android:id="@+id/sw_autoInstall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/auto_install_case"
        android:textColor="@color/gainsboro"/>

</LinearLayout>
